[package]
name = "rotten-potato"
version = "0.1.0"
edition = "2021"

[dependencies]
derivative = "2.2.0"
expect-test = "1.5.1"
lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }
log = "0.4.22"
miette = { version = "7.0.0" }
thiserror = "1.0.56"
unicode-segmentation = "1.10.1"

[dev-dependencies]
env_logger = "0.11.5"
pretty_assertions = "1.4.0"

[build-dependencies]
lalrpop = "0.22.0"
